--- a/gui/uis/pages/main_pages.ui
+++ b/gui/uis/pages/main_pages.ui
@@ -335,6 +335,9 @@
             <height>30</height>
            </rect>
           </property>
+          <property name="styleSheet">
+           <string notr="true">background: transparent;</string>
+          </property>
          </widget>
         </widget>
        </item>
@@ -361,7 +364,7 @@
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
-         <widget class="QWidget" name="scrollAreaWidgetContents_4">
+         <widget class="QWidget" name="scrollAreaWidgetContents_3">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -369,6 +372,9 @@
             <width>100</width>
             <height>30</height>
            </rect>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background: transparent;</string>
           </property>
          </widget>
         </widget>
