--- a/gui/uis/pages/main_pages.ui
+++ b/gui/uis/pages/main_pages.ui
@@ -331,13 +331,72 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>100</width>
-            <height>30</height>
+            <width>832</width>
+            <height>572</height>
            </rect>
           </property>
           <property name="styleSheet">
            <string notr="true">background: transparent;</string>
           </property>
+          <layout class="QVBoxLayout" name="scrollArea_2_layout">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QLabel" name="search_target_lable">
+             <property name="styleSheet">
+              <string notr="true">background: transparent;font-family:Microsoft Yahei;font-size: 14pt</string>
+             </property>
+             <property name="text">
+              <string>TextLabel</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="search_target_text">
+             <property name="styleSheet">
+              <string notr="true">background: transparent;font-family:Microsoft Yahei;font-size: 14pt</string>
+             </property>
+             <property name="text">
+              <string>TextLabel</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QWidget" name="input_image" native="true"/>
+           </item>
+           <item>
+            <widget class="QLabel" name="search_result_lable">
+             <property name="styleSheet">
+              <string notr="true">background: transparent;font-family:Microsoft Yahei;font-size: 14pt</string>
+             </property>
+             <property name="text">
+              <string>搜索结果</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
         </widget>
        </item>
