--- a/gui/uis/columns/left_column.ui
+++ b/gui/uis/columns/left_column.ui
@@ -35,7 +35,7 @@
       <number>0</number>
      </property>
      <widget class="QWidget" name="menu_1">
-      <layout class="QVBoxLayout" name="verticalLayout">
+      <layout class="QVBoxLayout" name="menu_1_layout">
        <property name="spacing">
         <number>5</number>
        </property>
@@ -54,7 +54,7 @@
       </layout>
      </widget>
      <widget class="QWidget" name="menu_2">
-      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <layout class="QVBoxLayout" name="menu_2_layout">
        <property name="spacing">
         <number>5</number>
        </property>
@@ -70,79 +70,6 @@
        <property name="bottomMargin">
         <number>5</number>
        </property>
-       <item>
-        <widget class="QWidget" name="btn_4_widget" native="true">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>40</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>16777215</width>
-           <height>40</height>
-          </size>
-         </property>
-         <layout class="QVBoxLayout" name="btn_4_layout">
-          <property name="spacing">
-           <number>0</number>
-          </property>
-          <property name="leftMargin">
-           <number>0</number>
-          </property>
-          <property name="topMargin">
-           <number>0</number>
-          </property>
-          <property name="rightMargin">
-           <number>0</number>
-          </property>
-          <property name="bottomMargin">
-           <number>0</number>
-          </property>
-         </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="label_2">
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">font-size: 16pt</string>
-         </property>
-         <property name="text">
-          <string>Menu 2 - Left Menu</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="label_3">
-         <property name="font">
-          <font>
-           <pointsize>9</pointsize>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">font-size: 9pt</string>
-         </property>
-         <property name="text">
-          <string>This is just an example menu.
-Add Qt Widgets or your custom widgets here.</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-         <property name="wordWrap">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
       </layout>
      </widget>
     </widget>
