--- a/gui/uis/pages/main_pages.ui
+++ b/gui/uis/pages/main_pages.ui
@@ -102,6 +102,19 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QFrame" name="func_1_frame_3">
+            <property name="styleSheet">
+             <string notr="true">background: transparent;</string>
+            </property>
+            <property name="frameShape">
+             <enum>QFrame::StyledPanel</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
@@ -120,7 +133,7 @@
              <string notr="true">background: transparent;font-family: Microsoft Yahei;font-size: 20pt;color: white;</string>
             </property>
             <property name="text">
-             <string>人脸搜索</string>
+             <string>以图搜图</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -153,6 +166,19 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QFrame" name="func_2_frame_3">
+            <property name="styleSheet">
+             <string notr="true">background: transparent;</string>
+            </property>
+            <property name="frameShape">
+             <enum>QFrame::StyledPanel</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
@@ -171,7 +197,7 @@
              <string notr="true">background: transparent;font-family: Microsoft Yahei;font-size: 20pt;color: white;</string>
             </property>
             <property name="text">
-             <string>智能筛选</string>
+             <string>智能分析</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -193,6 +219,19 @@
           </item>
           <item>
            <widget class="QFrame" name="func_3_frame_2">
+            <property name="styleSheet">
+             <string notr="true">background: transparent;</string>
+            </property>
+            <property name="frameShape">
+             <enum>QFrame::StyledPanel</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QFrame" name="func_3_frame_3">
             <property name="styleSheet">
              <string notr="true">background: transparent;</string>
             </property>
@@ -226,6 +265,35 @@
        <property name="bottomMargin">
         <number>5</number>
        </property>
+       <item>
+        <widget class="QScrollArea" name="scrollArea_4">
+         <property name="styleSheet">
+          <string notr="true">background: transparent;</string>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="verticalScrollBarPolicy">
+          <enum>Qt::ScrollBarAsNeeded</enum>
+         </property>
+         <property name="widgetResizable">
+          <bool>true</bool>
+         </property>
+         <widget class="QWidget" name="scrollAreaWidgetContents_4">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>832</width>
+            <height>572</height>
+           </rect>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background: transparent;</string>
+          </property>
+         </widget>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="page_3">
@@ -254,30 +322,13 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>100</width>
-            <height>30</height>
+            <width>832</width>
+            <height>572</height>
            </rect>
           </property>
           <property name="styleSheet">
            <string notr="true">background: transparent;</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_2">
-           <property name="leftMargin">
-            <number>0</number>
-           </property>
-           <property name="topMargin">
-            <number>0</number>
-           </property>
-           <property name="rightMargin">
-            <number>0</number>
-           </property>
-           <property name="bottomMargin">
-            <number>0</number>
-           </property>
-           <property name="spacing">
-            <number>0</number>
-           </property>
-          </layout>
          </widget>
         </widget>
        </item>
@@ -285,7 +336,9 @@
      </widget>
      <widget class="QWidget" name="page_4">
       <property name="styleSheet">
-       <string notr="true">font-size: 16pt</string>
+       <string notr="true">QFrame {
+	font-size: 16pt;
+}</string>
       </property>
       <layout class="QVBoxLayout" name="page_4_layout">
        <item>
@@ -307,10 +360,72 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>100</width>
-            <height>30</height>
+            <width>832</width>
+            <height>572</height>
            </rect>
           </property>
+          <property name="styleSheet">
+           <string notr="true">background: transparent;</string>
+          </property>
+          <layout class="QVBoxLayout" name="scrollArea_2_layout">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QLabel" name="search_target_lable">
+             <property name="styleSheet">
+              <string notr="true">background: transparent;font-family:Microsoft Yahei;font-size: 14pt</string>
+             </property>
+             <property name="text">
+              <string>TextLabel</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="search_target_text">
+             <property name="styleSheet">
+              <string notr="true">background: transparent;font-family:Microsoft Yahei;font-size: 14pt</string>
+             </property>
+             <property name="text">
+              <string>TextLabel</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QWidget" name="input_image" native="true"/>
+           </item>
+           <item>
+            <widget class="QLabel" name="search_result_lable">
+             <property name="styleSheet">
+              <string notr="true">background: transparent;font-family:Microsoft Yahei;font-size: 14pt</string>
+             </property>
+             <property name="text">
+              <string>搜索结果</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
         </widget>
        </item>
@@ -318,7 +433,9 @@
      </widget>
      <widget class="QWidget" name="page_5">
       <property name="styleSheet">
-       <string notr="true">font-size: 16pt</string>
+       <string notr="true">QFrame {
+	font-size: 16pt;
+}</string>
       </property>
       <layout class="QVBoxLayout" name="page_5_layout">
        <item>
@@ -335,7 +452,7 @@
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
-         <widget class="QWidget" name="scrollAreaWidgetContents_4">
+         <widget class="QWidget" name="scrollAreaWidgetContents_3">
           <property name="geometry">
            <rect>
             <x>0</x>
@@ -343,6 +460,9 @@
             <width>100</width>
             <height>30</height>
            </rect>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background: transparent;</string>
           </property>
          </widget>
         </widget>
